# nitro

./: .gitignore
NitroCppTest-JoaoAfonso/: CMakeLists.txt  IntersectionFinder.cpp  IntersectionFinder.h  README.md  Rectangle.cpp  Rectangle.h  main.cpp  test_rects.json
NitroCppTest-JoaoAfonso/tests/: CMakeLists.txt  test_helpers.cpp  test_helpers.h  test_intersections.cpp  test_rectangle.cpp
